# bloomer

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build_bloom.py  index.html  pyproject.toml  spellcheck.c  spellcheck.d64  spellcheck.prg  spellcheck.prg.elf
.github/workflows/: build.yml
src/: spellcheck.c
src/emulator/: webpack.config.js
src/python/: bloom_config.py  bloom_filter.py  bloom_statistics.py  build_bloom.py  disk_creator.py  disk_geometry.py  empirical_validator.py  hash_functions.py  header_generator.py  inject_autoload.py  scowl_downloader.py  scowl_parser.py
